# tantivy-remote

./: Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-2dc3b40c559b177eb5a52c342c05b7716e15e3544a5a973bee3b9af129b7f57f.json  query-ac2384b725a692e2a3d53eac5a7876e109f96c12b383e90d5cfffb40776a7198.json  query-cc74e59ed901e856c827358499e7ce914e9597d58c54b28cecd5aca767fe42ae.json  query-ef56f6b47be59e70f0164e1c627a779687a7d06beb2acb8c29a7216ec5405fd8.json
migrations/: 0001_init.sql
src/: cache.rs  directory.rs  file.rs  lib.rs  metadata.rs  operator.rs  utils.rs  writer.rs
src/test/: base.rs  mod.rs
src/utils/: error.rs  path.rs
